--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Levon",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.6.0"
   }
 }
